; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/most/cdev/extr_cdev.c_comp_tx_completion.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/most/cdev/extr_cdev.c_comp_tx_completion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.most_interface = type { i32 }
%struct.comp_channel = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"Bad interface pointer\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"Channel ID out of range\0A\00", align 1
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.most_interface*, i32)* @comp_tx_completion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @comp_tx_completion(%struct.most_interface* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.most_interface*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.comp_channel*, align 8
  store %struct.most_interface* %0, %struct.most_interface** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.most_interface*, %struct.most_interface** %4, align 8
  %8 = icmp ne %struct.most_interface* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %2
  %10 = call i32 @pr_info(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %39

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %13
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.most_interface*, %struct.most_interface** %4, align 8
  %19 = getelementptr inbounds %struct.most_interface, %struct.most_interface* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp sge i32 %17, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %16, %13
  %23 = call i32 @pr_info(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %3, align 4
  br label %39

26:                                               ; preds = %16
  %27 = load %struct.most_interface*, %struct.most_interface** %4, align 8
  %28 = load i32, i32* %5, align 4
  %29 = call %struct.comp_channel* @get_channel(%struct.most_interface* %27, i32 %28)
  store %struct.comp_channel* %29, %struct.comp_channel** %6, align 8
  %30 = load %struct.comp_channel*, %struct.comp_channel** %6, align 8
  %31 = icmp ne %struct.comp_channel* %30, null
  br i1 %31, label %35, label %32

32:                                               ; preds = %26
  %33 = load i32, i32* @ENXIO, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %3, align 4
  br label %39

35:                                               ; preds = %26
  %36 = load %struct.comp_channel*, %struct.comp_channel** %6, align 8
  %37 = getelementptr inbounds %struct.comp_channel, %struct.comp_channel* %36, i32 0, i32 0
  %38 = call i32 @wake_up_interruptible(i32* %37)
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %35, %32, %22, %9
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @pr_info(i8*) #1

declare dso_local %struct.comp_channel* @get_channel(%struct.most_interface*, i32) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
